Fix overflow bug.

--- a/www/css/960gs.css
+++ b/www/css/960gs.css
@@ -12,6 +12,7 @@
 .container_12 {
 	width: 96%;
 	margin: 2%;
+	overflow: hidden;
 }
 
 
